# wifi-config-app

./: .gitignore  config.h  credential_store.cpp  credential_store.h  health_client.cpp  health_client.h  ntp_client.cpp  ntp_client.h  reading_cache.cpp  reading_cache.h  running_average.cpp  running_average.h  sensor_poller.cpp  sensor_poller.h  server_reporter.cpp  server_reporter.h  tempmon-profile.xml  web_server.cpp  web_server.h  wifi-config-app.ino  wifi_manager.cpp  wifi_manager.h
.github/workflows/: ci.yml
.kiro/specs/hygrometer-reporting/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/wifi-config-app/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: branching.md  device-upload.md  diagnostics.md  embedded-architecture.md  header-placement.md  sdlc.md
include/: ntp_format.h
scripts/: Connect-Wifi.ps1
test/: CMakeLists.txt  Dockerfile  health_cache.h  health_parser.h  health_retry.h  json_serializer.h  landing_page_generator.h  reading_cache_logic.h  response_parser.h  running_average_logic.h  temperature_convert.h  test_credential_store.cpp  test_credential_store_no_persist.cpp  test_health_cache.cpp  test_health_parser.cpp  test_health_retry.cpp  test_json_serializer.cpp  test_landing_page.cpp  test_ntp_format.cpp  test_reading_cache.cpp  test_response_parser.cpp  test_running_average.cpp  test_temperature_convert.cpp  test_url_decode.cpp  url_decode.h
test/mocks/: Adafruit_AHTX0.h  Arduino.h  FlashStorage.h  WiFi101.h  WiFiClient.h  WiFiUdp.h
